<resources>
    <string name="app_name">E-RAPORT SDN 01 CIPAGALO</string>
    <string name="sdn_1_cipagalo">SDN 01 CIPAGALO</string>
    <string name="e_report">E-RAPORT</string>
    <string name="username">NIS/NIP</string>
    <string name="log_in">LOGIN</string>
    <string name="lupa_password">LUPA PASSWORD?</string>
    <string name="johny_alexander">Johny Alexander</string>
    <string name="nis">NIS. 18.19.01.001</string>
    <string name="profil_akun">PROFIL AKUN</string>
    <string name="lihat_nilai">LIHAT NILAI</string>
    <string name="logout">LOGOUT</string>
    <string name="pengaturan">PENGATURAN</string>
    <string name="nisn">NISN. 0128562737</string>
    <string name="akun">Pengaturan Akun</string>
    <string name="ganti_username">Ganti Username</string>
    <string name="logo_ganti_username">TODO</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="nama_panggilan">Nama Panggilan</string>
    <string name="john">John</string>
    <string name="alamat">Alamat</string>
    <string name="perumahan_palem_2_jl_sukapura_bandung">Perumahan Palem 2, Jl. Sukapura, Bandung.</string>
    <string name="tempat_tanggal_lahir">Tempat, tanggal lahir</string>
    <string name="bandung_23_may_2010">Bandung, 23 May 2010</string>
    <string name="_082388889999">082388889999</string>
    <string name="kontak_murid">Kontak Murid</string>
    <string name="kelas_semester">Kelas / Semester</string>
    <string name="_3a_ganjil">3A / GANJIL</string>
    <string name="wali_kelas">Wali Kelas</string>
    <string name="rahmawati_s_pd_sd">Rahmawati, S.Pd.SD.</string>
    <string name="kontak_wali_kelas">Kontak Wali Kelas</string>
    <string name="_081199998888">081199998888</string>
    <string name="nama_orang_tua">Nama Orang Tua</string>
    <string name="nurhayati_rahim">Nurhayati Rahim</string>
    <string name="kontak_orang_tua">Kontak Orang Tua</string>
    <string name="_089999998888">089999998888</string>
    <string name="nip">NIP. 1111000248291</string>
    <string name="input_nilai">INPUT NILAI</string>

    <string name="drawer_open">Left Drawer Open</string>
    <string name="drawer_close">Left Drawer Closed</string>
    <string name="password">Password</string>
    <string name="pilih_kelas">Pilih Kelas:</string>
    <string name="pilih_mata_pelajaran">Pilih Mata Pelajaran</string>
    <string name="daftar_siswa">Daftar Siswa</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="pendidikan_kewarganegaraan">Pendidikan Kewarganegaraan</string>
    <string name="nilai_uas">Nilai UAS</string>
    <string name="_80">80</string>
    <string name="uts">Nilai UTS</string>
    <string name="ulangan_harian_1">Ulangan Harian 1</string>
    <string name="ulangan_harian_2">Ulangan Harian 2</string>
    <string name="ulangan_harian_3">Ulangan Harian 3</string>
    <string name="ulangan_harian_4">Ulangan Harian 4</string>
    <string name="ulangan_harian_5">Ulangan Harian 5</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="tahun_ajaran">Tahun Ajaran</string>
    <string name="semester">Semester</string>
    <string name="kontak">Kontak</string>
    <string name="wali_murid_kelas">Wali Murid Kelas</string>
    <string name="guru_mata_pelajaran">Guru Mata Pelajaran</string>
    <string name="pemerintah_kabupaten_bandung">PEMERINTAH KABUPATEN BANDUNG</string>
    <string name="dinas_pendidikan_kebudayaan_pemuda_dan_olahraga">DINAS PENDIDIKAN KEBUDAYAAN PEMUDA DAN OLAHRAGA</string>
    <string name="sd_negeri_01_cipagalo">SD NEGERI 01 CIPAGALO</string>
    <string name="alamat_sekolah">Jl. Terusan Buah Batu No.320, Cipagalo, Kec. Bojongsoang, Bandung, Jawa Barat</string>
    <string name="no">No.</string>
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="kkm">  KKM  </string>
    <string name="nilai">  Nilai  </string>
    <string name="deskripsi">   Deskripsi   </string>
    <string name="berhasil">Berhasil</string>
    <string name="gagal">Gagal</string>
    <string name="tutup">Tutup</string>
    <string name="dash">-</string>
    <string name="edit">Edit</string>
    <string name="bahasa_sunda">Bahasa Sunda</string>
    <string name="jumlah_nilai">Jumlah Nilai</string>
    <string name="rata_rata">Rata- Rata</string>
    <string name="informasi_siswa">Informasi Siswa:</string>
</resources>
