<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/pb_profilSiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profil_fotoSiswa"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/gambaruser"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_profil_namaSiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/johny_alexander"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profil_fotoSiswa" />

    <TextView
        android:id="@+id/text_profil_nisSiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/nis"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profil_namaSiswa" />

    <TextView
        android:id="@+id/text_profil_nisNasionalSiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/nisn"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profil_nisSiswa" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profil_nisNasionalSiswa">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_profil_kotak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#c1d4f5">

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_marginEnd="30dp"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_profil_namaPanggilanView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/nama_panggilan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_profil_namaPanggilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/john"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_profil_alamatView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/alamat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profil_namaPanggilanView" />

            <TextView
                android:id="@+id/text_profil_alamat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/perumahan_palem_2_jl_sukapura_bandung"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/text_profil_namaPanggilan" />

            <TextView
                android:id="@+id/text_profil_ttlView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/tempat_tanggal_lahir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profil_alamat" />

            <TextView
                android:id="@+id/text_profil_ttl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/bandung_23_may_2010"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/text_profil_alamat" />

            <TextView
                android:id="@+id/text_profil_kontakMuridView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/kontak_murid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profil_ttlView" />

            <TextView
                android:id="@+id/text_profil_KontakMurid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/_082388889999"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/text_profil_ttl" />

            <TextView
                android:id="@+id/text_profil_kelasView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/kelas_semester"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profil_kontakMuridView" />

            <TextView
                android:id="@+id/text_profil_Kelas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/_3a_ganjil"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/text_profil_KontakMurid" />

            <TextView
                android:id="@+id/text_profil_waliKelasView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/wali_kelas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profil_kelasView" />

            <TextView
                android:id="@+id/text_profil_waliKelas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/rahmawati_s_pd_sd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/text_profil_Kelas" />

            <TextView
                android:id="@+id/text_profil_kontakWaliKelasView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/kontak_wali_kelas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profil_waliKelasView" />

            <TextView
                android:id="@+id/text_profil_kontakWaliKelas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/_081199998888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/text_profil_waliKelas" />

            <TextView
                android:id="@+id/text_profil_namaOrtuView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/nama_orang_tua"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profil_kontakWaliKelasView" />

            <TextView
                android:id="@+id/text_profil_namaOrtu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/nurhayati_rahim"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/text_profil_kontakWaliKelas" />

            <TextView
                android:id="@+id/text_profil_kontakOrtuView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/kontak_orang_tua"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profil_namaOrtuView" />

            <TextView
                android:id="@+id/text_profil_kontakOrtu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/_089999998888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/text_profil_namaOrtu" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
